TurtleProject/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\javazoom.jar;D:\files\apcs\GITHUB\Turtle2020\TurtleProject
-d
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\doc
-encoding
UTF-8
-charset
UTF-8
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\Turtle.java
<---- end of javadoc command ---->
Loading source file D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\Turtle.java...
Constructing Javadoc information...
Standard Doclet version 11.0.2
Building tree for all the packages and classes...
Generating D:\files\apcs\GITHUB\Turtle2020\TurtleProject\doc\bookClasses\Turtle.html...
Generating D:\files\apcs\GITHUB\Turtle2020\TurtleProject\doc\bookClasses\package-summary.html...
Generating D:\files\apcs\GITHUB\Turtle2020\TurtleProject\doc\constant-values.html...
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\MovieWriter.java:9: error: package ch.randelshofer.media.avi does not exist
import ch.randelshofer.media.avi.AVIOutputStream;
                                ^
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:40: error: package javax.media.protocol does not exist
import javax.media.protocol.DataSource;
                           ^
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:42: error: package javax.media.format does not exist
import javax.media.format.VideoFormat;
                         ^
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:53: error: cannot find symbol
public class JpegImagesToMovie implements ControllerListener, 
                                          ^
  symbol: class ControllerListener
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:54: error: cannot find symbol
  DataSinkListener {
  ^
  symbol: class DataSinkListener
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:70: error: cannot find symbol
                               MediaLocator outML) {
                               ^
  symbol:   class MediaLocator
  location: class JpegImagesToMovie
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:122: error: cannot find symbol
                         MediaLocator outML) {
                         ^
  symbol:   class MediaLocator
  location: class JpegImagesToMovie
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:139: error: cannot find symbol
                      MediaLocator outML,
                      ^
  symbol:   class MediaLocator
  location: class JpegImagesToMovie
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:235: error: cannot find symbol
                      MediaLocator outML,
                      ^
  symbol:   class MediaLocator
  location: class JpegImagesToMovie
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:325: error: cannot find symbol
  DataSink createDataSink(Processor p, MediaLocator outML) {
                          ^
  symbol:   class Processor
  location: class JpegImagesToMovie
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:325: error: cannot find symbol
  DataSink createDataSink(Processor p, MediaLocator outML) {
                                       ^
  symbol:   class MediaLocator
  location: class JpegImagesToMovie
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:325: error: cannot find symbol
  DataSink createDataSink(Processor p, MediaLocator outML) {
  ^
  symbol:   class DataSink
  location: class JpegImagesToMovie
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:356: error: cannot find symbol
  boolean waitForState(Processor p, int state) {
                       ^
  symbol:   class Processor
  location: class JpegImagesToMovie
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:370: error: cannot find symbol
  public void controllerUpdate(ControllerEvent evt) {
                               ^
  symbol:   class ControllerEvent
  location: class JpegImagesToMovie
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:412: error: cannot find symbol
  public void dataSinkUpdate(DataSinkEvent evt) {
                             ^
  symbol:   class DataSinkEvent
  location: class JpegImagesToMovie
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:508: error: cannot find symbol
  static MediaLocator createMediaLocator(String url) {
         ^
  symbol:   class MediaLocator
  location: class JpegImagesToMovie
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:37: error: package javax.media does not exist
import javax.media.*;
^
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:38: error: package javax.media.control does not exist
import javax.media.control.*;
^
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:39: error: package javax.media.protocol does not exist
import javax.media.protocol.*;
^
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:41: error: package javax.media.datasink does not exist
import javax.media.datasink.*;
^
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:539: error: cannot find symbol
  class ImageDataSource extends PullBufferDataSource {
                                ^
  symbol:   class PullBufferDataSource
  location: class JpegImagesToMovie
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:606: error: cannot find symbol
  class ImageSourceStream implements PullBufferStream {
                                     ^
  symbol:   class PullBufferStream
  location: class JpegImagesToMovie
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:550: error: cannot find symbol
    public void setLocator(MediaLocator source) {
                           ^
  symbol:   class MediaLocator
  location: class JpegImagesToMovie.ImageDataSource
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:553: error: cannot find symbol
    public MediaLocator getLocator() {
           ^
  symbol:   class MediaLocator
  location: class JpegImagesToMovie.ImageDataSource
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:580: error: cannot find symbol
    public PullBufferStream[] getStreams() {
           ^
  symbol:   class PullBufferStream
  location: class JpegImagesToMovie.ImageDataSource
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:589: error: cannot find symbol
    public Time getDuration() {
           ^
  symbol:   class Time
  location: class JpegImagesToMovie.ImageDataSource
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:610: error: cannot find symbol
    VideoFormat format;
    ^
  symbol:   class VideoFormat
  location: class JpegImagesToMovie.ImageSourceStream
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:641: error: cannot find symbol
    public void read(Buffer buf) throws IOException {
                     ^
  symbol:   class Buffer
  location: class JpegImagesToMovie.ImageSourceStream
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:695: error: cannot find symbol
    public Format getFormat() {
           ^
  symbol:   class Format
  location: class JpegImagesToMovie.ImageSourceStream
D:\files\apcs\GITHUB\Turtle2020\TurtleProject\bookClasses\JpegImagesToMovie.java:699: error: cannot find symbol
    public ContentDescriptor getContentDescriptor() {
           ^
  symbol:   class ContentDescriptor
  location: class JpegImagesToMovie.ImageSourceStream
Building index for all the packages and classes...
Building index for all classes...
Generating D:\files\apcs\GITHUB\Turtle2020\TurtleProject\doc\allclasses.html...
Generating D:\files\apcs\GITHUB\Turtle2020\TurtleProject\doc\allclasses.html...
Generating D:\files\apcs\GITHUB\Turtle2020\TurtleProject\doc\index.html...
30 errors
